Improved error handling in compiler and CLI